--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,15 @@
   <body>
     <nav>
       <a href="/">Bulletin Board</a>
-    </nav>
 
+      <% if current_user != nil%>
+        <a href="/users/sign_out">Sign out</a>
+        <a href="/users/edit">Edit</a>
+      <% else %>
+        <a href="/users/sign_up">Sign up</a>
+        <a href="/users/sign_in">Sign in</a>
+      </nav>
+    <% end %>
     <hr>
 
     <% if notice.present? %>
