--- a/app/views/boards/index.html.erb
+++ b/app/views/boards/index.html.erb
@@ -14,19 +14,25 @@
       Add a new board
     </h2>
 
-    <form action="/insert_board" method="post">
-      <div>
-        <label for="name_box">
-          Name
-        </label>
+    <% if current_user != nil %>
 
-        <input type="text" id="name_box" name="query_name">
-      </div>
+      <form action="/insert_board" method="post">
+        <div>
+          <label for="name_box">
+            Name
+          </label>
 
-      <button>
-        Add board
-      </button>
-    </form>
+          <input type="text" id="name_box" name="query_name">
+        </div>
+
+        <button>
+          Add board
+        </button>
+      </form>
+
+    <% else %>
+      <p>You must <a href="/users/sign_in">sign in</a> to add a board.</p>
+    <% end %>
   </div>
 </div>
 
@@ -38,6 +44,17 @@
       <a href="/boards/<%= a_board.id %>">
         <%= a_board.name %>
       </a>
+
+      <div>
+        <% matching_users = User.where({ :id => a_board.user_id })%>
+
+        <% the_user = matching_users.at(0) %>
+
+        Owner: <%= the_user.email %>
+      </div>
+
+      <hr>
+
     </li>
   <% end %>
 </ul>
