--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -55,6 +55,7 @@
   <tr>
     <th>Title</th>
     <th>Body</th>
+    <th>Posted by</th>
     <th>Posted on</th>
     <th>Expires on</th>
   </tr>
@@ -63,6 +64,7 @@
     <tr>
       <td><%= a_post.title %></td>
       <td><%= a_post.body %></td>
+      <td><%= User.where( {:id => a_post.user_id }).at(0).email %></td>
       <td><%= a_post.created_at.strftime("%b %e, %Y") %></td>
       <td><%= a_post.expires_on.strftime("%b %e, %Y") %></td>
     </tr>
@@ -75,6 +77,7 @@
   <tr>
     <th>Title</th>
     <th>Body</th>
+    <th>Posted by</th>
     <th>Posted on</th>
     <th>Expired on</th>
   </tr>
@@ -83,6 +86,7 @@
     <tr>
       <td><%= a_post.title %></td>
       <td><%= a_post.body %></td>
+      <td><%= User.where( {:id => a_post.user_id }).at(0).email %></td>
       <td><%= a_post.created_at.strftime("%b %e, %Y") %></td>
       <td><%= a_post.expires_on.strftime("%b %e, %Y") %></td>
     </tr>
